
http://inter-mediator.org/

Change Log will be supplied by English only.
Latest changes might exist on the GitHub repository. Please check: https://github.com/msyk/INTER-Mediator.
Also the Migration Guide (Japanese) might be informative: http://inter-mediator.org/ja/docs-migration.html.

Ver.5.0 =========================================================
        [Major differences from Ver.4]
=================================================================

Ver.4.7 (in development)
- Update Sample_realtime (invoice_FMS.html/invoice_MySQL.html) for compatibility with SSL/TLS.
- The Page File Editor appears in the INTER-Mediator-Support directory.
- The seeding files for the vm to trial are take place in the dist-docs/vm-for-trial directory.
- The Definition File Editor supports the 'navi-control' and 'calculation' keys.
- [INFO] The dist-docs/sample_schema_mysql.txt describes the encode as utf8mb4.
         It means the schema support MySQL 5.5.3 or above.
- [BUG FIX] The Definition File editor worked. It should not do at the initial situation. We should make it sure.

Ver.4.6 (2014/11/21)
- Query conditions, sort fields, record number and updating context can be described in data-im attributes.
  This feature realizes non-programming search page.
- In case of 'navi-control' is 'master-hide', the pagination control is going to hide when the detail area appears.
- The Date/Time functions are available in the expression of 'calculation' value.
- Add methods (addCondition, addSortKey, clearCondition, clearSortKey) to INTERMediator object.
- Use fmresultset XML grammer internally in getFromDB method of DB_FileMaker_FX class.
- Support syncing with multiple clients with Pusher using FileMaker datasource (except for portal=>true context).
- Add INTERMediator.totalRecordCount property and add getTotalCount() to DB_FileMaker_FX class to get the total 
  number of records in the main table.