@@ -1,0 +1,73 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
+    <link rel="stylesheet" type="text/css" href="../sample.css"/>
+    <title>INTER-Mediator - Sample - Soft Delete/MySQL</title>
+    <script src="deltest_FMS.php"></script>
+    <script type="text/javascript">
+        window.onload = function () {
+            INTERMediator.construct(true);
+        }
+    </script>
+</head>
+<body>
+<ol>
+    <li>The context of the left table uses the "Soft-Delete" feature, and the right side does not.</li>
+    <li>The "checking" field is the flag of deleting.</li>
+    <li>You can delete any records in the left table, and it is going to disappear in the table. It's good to remember the "id" field's value that you delete.</li>
+    <li>After deleting you should update this page. The checking field in the corresponding record of the right table is going to be set to "1".</li>
+</ol>
+<div id="IM_NAVIGATOR">Navigation Controls by INTER-Mediator</div>
+<table border="1" style="float:left;">
+    <thead>
+    <tr>
+        <th>id</th>
+        <th>name</th>
+        <th>mail</th>
+        <th>category</th>
+        <th>location</th>
+        <th>checking</th>
+        <th></th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td data-im="personlist@id"></td>
+        <td data-im="personlist@name"></td>
+        <td data-im="personlist@mail"></td>
+        <td data-im="personlist@category"></td>
+        <td data-im="personlist@location"></td>
+        <td data-im="personlist@checking"></td>
+        <td></td>
+    </tr>
+    </tbody>
+</table>
+
+<table border="1" style="float:left;margin-left:10px">
+    <thead>
+    <tr>
+        <th>id</th>
+        <th>name</th>
+        <th>mail</th>
+        <th>category</th>
+        <th>location</th>
+        <th>checking</th>
+        <th></th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td data-im="personrowlist@id"></td>
+        <td data-im="personrowlist@name"></td>
+        <td data-im="personrowlist@mail"></td>
+        <td data-im="personrowlist@category"></td>
+        <td data-im="personrowlist@location"></td>
+        <td data-im="personrowlist@checking"></td>
+    </tr>
+    </tbody>
+</table>
+<br clear="all"/>
+</body>
+</html>
