@@ -4,8 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
     <link rel="stylesheet" type="text/css" href="../sample.css"/>
-    <title>INTER-Mediator - Sample - Form Style/MySQL</title>
-    <script src="deltest.php"></script>
+    <title>INTER-Mediator - Sample - Soft Delete/MySQL</title>
+    <script src="deltest_MySQL.php"></script>
     <script type="text/javascript">
         window.onload = function () {
             INTERMediator.construct(true);
@@ -13,6 +13,12 @@
     </script>
 </head>
 <body>
+<ol>
+    <li>The context of the left table uses the "Soft-Delete" feature, and the right side does not.</li>
+    <li>The "checking" field is the flag of deleting.</li>
+    <li>You can delete any records in the left table, and it is going to disappear in the table. It's good to remember the "id" field's value that you delete.</li>
+    <li>After deleting you should update this page. The checking field in the corresponding record of the right table is going to be set to "1".</li>
+</ol>
 <div id="IM_NAVIGATOR">Navigation Controls by INTER-Mediator</div>
 <table border="1" style="float:left;">
     <thead>
@@ -59,7 +65,6 @@
         <td data-im="personrowlist@category"></td>
         <td data-im="personrowlist@location"></td>
         <td data-im="personrowlist@checking"></td>
-        <td></td>
     </tr>
     </tbody>
 </table>
