@@ -37,5 +37,5 @@ IM_Entry(
     ),
     array(),
     array('db-class' => 'PDO'),
-    2
+    false
 );
