@@ -168,9 +168,11 @@
             <a href="Sample_forDebugging/calctest1.html">calctest1</a>
             <a href="Sample_forDebugging/postonlytest.html">postonly</a>
             <a href="Sample_forDebugging/contexttest.html">context-test</a>
-            <a href="Sample_forDebugging/deltest.html">logical delete</a>
+            <a href="Sample_forDebugging/deltest_MySQL.html">logical delete</a>
         </td>
-        <td></td>
+        <td>
+            <a href="Sample_forDebugging/deltest_FMS.html">logical delete</a>
+        </td>
         <td></td>
         <td></td>
     </tr>
